--- a/estilos.css
+++ b/estilos.css
@@ -1,28 +1,38 @@
-*{
+* {
     margin: 0;
 }
 
-.contenedor{
-  background: blueviolet;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
+.contenedor {
+    background: blueviolet;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    position: relative;
 }
 
-p{
+p {
     font-size: xx-large;
     padding: 15%;
 }
 
-button{
+button {
     font-size: xx-large;
     padding: 0.75em;
 }
 
-#yesBtn{
-transform: translate(-100%,0);
+#yesBtn {
+    transform: translate(-100%, 0);
 }
 
-#noBtn{
+#noBtn {
     position: absolute;
+}
+
+video {
+    position: absolute;
+    top: 10px;
+    left: 10px; 
+    width: 200px;
+    height: 140px;
+    z-index: 10;
 }
